--- a/start_page.html
+++ b/start_page.html
@@ -40,7 +40,7 @@
     <p>Tu centro de formacion de confianza</p>
   </div>
   <div class="texto_imagen_centro_2">
-    <p>-Section 43-</p>
+    <p>-Proteus Security-</p>
   </div>
   </div>
 
